--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,10 @@ body {
   color: #ffffff;
 }
 
+.top-header-area .col-5 {
+  padding-left: 0;
+}
+
 @media (max-width: 720px) {
   .top-header-area {
     display: none !important;
@@ -32,6 +36,7 @@ ul li {
   padding-left: 1.2rem;
   display: inline-block;
   padding-right: 20px;
+  position: relative;
 }
 
 @media (max-width: 720px) {
@@ -40,15 +45,31 @@ ul li {
   }
 }
 
-ul li.has-dropdown::before {
-  content: "+";
-  width: 1.3em;
-  margin-left: -1.3em;
-  padding: 5px;
+ul li a {
+  text-decoration: none;
+  color: #595857;
 }
 
-ul li .dropdown {
+ul li ul.dropdown {
+  position: absolute;
   display: none;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 15px;
+  background: #ffffff;
+  border-radius: 0 5px;
+  width: 200px;
+  right: 272px;
+  box-shadow: 0 0 8px #ccc;
+}
+
+ul li ul.dropdown li {
+  padding: 5px 10px;
+  width: a;
+  width-width: 100%;
+  width-padding: 0;
+  width-height: 42px;
+  width-line-height: 42px;
 }
 
 .phone-nav {
@@ -77,5 +98,79 @@ ul li .dropdown {
 .app-nav {
   position: absolute;
   right: 0;
+}
+
+.app-btn {
+  border: 1px solid #BCA857;
+  border-radius: 18px;
+}
+
+.nav-item {
+  padding: 0 10px;
+}
+
+a {
+  cursor: pointer;
+}
+
+.masthead {
+  height: 100vh;
+  min-height: 500px;
+  background-image: url("https://source.unsplash.com/BtbjCFUvBXs/1920x1080");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.service-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 80px 0;
+  background-color: #fff;
+}
+
+.service-section p {
+  margin-bottom: 15px;
+}
+
+.service-section .single-service {
+  height: 200px;
+}
+
+.service-section .single-service .figure {
+  height: 100%;
+  margin-bottom: 0 !important;
+}
+
+.service-section .single-service .figure-img {
+  margin-bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.service-section .single-service .overlay {
+  position: relative;
+  left: 0;
+  top: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #da5757;
+  opacity: 0.4;
+}
+
+.service-section .single-service .overlay button {
+  font-family: Ubuntu;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  opacity: 1;
+  background-color: #da5757;
+  position: relative;
+  float: left;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
