--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -10,7 +10,9 @@ html,body{
     background-color: $black;
     flex-direction: row;
     color: #ffffff;
-
+    .col-5{
+        padding-left: 0;
+    }
     @media(max-width:720px) {
         display: none !important;
 
@@ -27,20 +29,51 @@ ul{
         padding-left: 1.2rem;
         display: inline-block;
         padding-right: 20px;
+        position: relative;
         @media(max-width:720px) {
             display: none;
            
     
         }
-        &.has-dropdown::before{
-            content: "+";
-            width: 1.3em;
-            margin-left:-1.3em; 
-            padding: 5px;
-        }
+        a{
+            text-decoration: none;
+            color: $grey;
 
-        .dropdown{
+            
+        }
+        // &:not(:last-child):hover:after{
+        //     border-bottom: 3px solid #BCA857;
+        //     content: '';
+
+            
+        // }
+        ul.dropdown{
+            //display: none;
+            position: absolute;
             display: none;
+            flex-direction: column;
+            flex-grow: 1;
+            padding: 15px;
+            
+            background: #ffffff;
+            border-radius:0 5px;
+            width: 200px;
+            right: 272px;
+            box-shadow: 0 0 8px #ccc;
+            //box-shadow: 0 10px 6px -6px #ffffff;
+            li{
+                
+                padding: 5px 10px;
+                width: 
+                a{
+                    width: 100%;
+                    padding: 0;
+                    height: 42px;
+                    line-height: 42px;
+                }
+            }
+            
+        
         }
     }
 }
@@ -71,3 +104,27 @@ ul{
     position: absolute;
     right: 0;
 }
+.app-btn{
+    border: 1px solid #BCA857;
+    border-radius: 18px;
+}
+
+.nav-item{
+    padding: 0 10px; 
+}
+
+a{
+    cursor: pointer;
+   
+}
+
+.masthead {
+    height: 100vh;
+    min-height: 500px;
+    background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+@import 'services';
