--- a/public/css/main.css
+++ b/public/css/main.css
@@ -128,6 +128,8 @@ a {
   flex-wrap: wrap;
   padding: 80px 0;
   background-color: #fff;
+  border-bottom: 1px solid #e4e2e2;
+  margin-bottom: 40px;
 }
 
 .service-section p {
@@ -136,6 +138,13 @@ a {
 
 .service-section .single-service {
   height: 200px;
+  transition: 0.4s ease-in;
+}
+
+@media (max-width: 720px) {
+  .service-section .single-service {
+    margin-bottom: 10px;
+  }
 }
 
 .service-section .single-service .figure {
@@ -155,22 +164,37 @@ a {
   top: -100%;
   width: 100%;
   height: 100%;
-  background-color: #da5757;
-  opacity: 0.4;
+  background-color: #000000b5;
 }
 
-.service-section .single-service .overlay button {
+.service-section .single-service .overlay .service-title {
   font-family: Ubuntu;
   font-size: 18px;
   font-weight: 500;
   color: #fff;
-  opacity: 1;
-  background-color: #da5757;
+  border: 1px solid #f03b62;
+  border-radius: 0;
   position: relative;
   float: left;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
+}
+
+.service-section .single-service .overlay:hover,
+.service-section .single-service .overlay:focus {
+  box-shadow: 0 0 15px #858080;
+  transition: 0.3s ease-in-out;
+}
+
+.service-section .single-service .overlay:hover .service-title,
+.service-section .single-service .overlay:focus .service-title {
+  border-radius: 5px;
+}
+
+.service-section .single-service .overlay:hover .service-title:hover,
+.service-section .single-service .overlay:focus .service-title:hover {
+  border-radius: 5px;
 }
 
