--- a/resources/sass/_services.scss
+++ b/resources/sass/_services.scss
@@ -4,6 +4,8 @@
     flex-wrap: wrap;
     padding: 80px 0;
     background-color: #fff;
+    border-bottom: 1px solid #e4e2e2;
+    margin-bottom: 40px;
 
     p{
         margin-bottom: 15px;
@@ -11,7 +13,11 @@
 
     .single-service{
         height: 200px;
-
+        @media(max-width:720px) {
+            margin-bottom: 10px;
+    
+        }
+        transition: .4s ease-in ;
         .figure{
             height: 100%;
             margin-bottom: 0 !important;
@@ -30,21 +36,33 @@
             top: -100%;
             width: 100%;
             height: 100%;
-            background-color: rgb(218, 87, 87);
-            opacity: .4;
-            button{
+            background-color: #000000b5;
+            
+            .service-title{
                 font-family: Ubuntu;
                 font-size: 18px;
                 font-weight: 500;
                 color: #fff;
-                opacity: 1;
-                background-color:rgb(218, 87, 87);
+                border: 1px solid #f03b62;
+                border-radius: 0;
                 position: relative;
                 float: left;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
                 z-index: 2;
+            }
+
+            &:hover,&:focus{
+                box-shadow: 0 0 15px rgb(133, 128, 128);
+                //transform: translate(0,-5px);
+                transition: .3s ease-in-out;
+                .service-title{
+                    border-radius: 5px;
+                    &:hover{
+                        border-radius: 5px;
+                    }
+                }
             }
         }
     }
