--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,7 +204,7 @@ a {
   background: rgba(66, 125, 248, 0.8);
   border: none;
   border-radius: 5px;
-  position: relative;
+  position: absolute;
   top: -60%;
   left: -30px;
 }
