--- a/resources/sass/_masthead.scss
+++ b/resources/sass/_masthead.scss
@@ -4,7 +4,7 @@
     background: rgba(66, 125, 248, 0.8);
     border: none;
     border-radius: 5px;
-    position: relative;
+    position: absolute;
     top: -60%;
     left: -30px;
 }
