--- a/resources/sass/_masthead.scss
+++ b/resources/sass/_masthead.scss
@@ -1,10 +1,36 @@
+.masthead {
+    height: 50vh;
+    min-height: 500px;
+    background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
 .kodeklinik-box{
-    height: 520px;
-    width: 456px;
+    height: 500px;
+    width: 436px;
     background: rgba(66, 125, 248, 0.8);
     border: none;
     border-radius: 5px;
     position: absolute;
-    top: 35%;
+    top: 24%;
     left: 30px;
+    padding: 15px 30px;
+
+    .content{
+        width: 100%;
+        padding: 20px 0;
+        height: 100%;
+        // background: #fff;
+        p.h2{
+            color: #ffffff;
+            position: absolute;
+            margin: 0 auto;
+            font-family: "Open Sans",sans-serif;
+
+        }
+    }
+    
+
 }
