--- a/public/css/main.css
+++ b/public/css/main.css
@@ -250,3 +250,10 @@ a {
   border-radius: 50%;
 }
 
+button.submit {
+  background: linear-gradient(to right, #ff8a00 0%, #da1b60 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
