--- a/resources/sass/_masthead.scss
+++ b/resources/sass/_masthead.scss
@@ -62,3 +62,13 @@
     border-radius: 50%;
     
 }
+
+button.submit {
+     // set the background color
+  background: linear-gradient(to right, #ff8a00 0%, #da1b60 100%);
+  // background color masked along the text and clip away the rest
+  -webkit-background-clip: text;
+  background-clip: text;
+  // make fill color to transparent so that masked background color will be shown
+  -webkit-text-fill-color: transparent;
+}
