--- a/resources/sass/_services.scss
+++ b/resources/sass/_services.scss
@@ -21,6 +21,7 @@
         .figure{
             height: 100%;
             margin-bottom: 0 !important;
+            width: inherit;
         }
 
         .figure-img{
