--- a/resources/sass/dark.scss
+++ b/resources/sass/dark.scss
@@ -7,9 +7,27 @@ body,.service-section{
 }
 .app-header{
     background-color:#3C4042 !important;
+    box-shadow: none;
     * {
         color: #fff ;
         border-color: #fff;
     }
+    
 
+}
+
+.columns2{
+    background: #3C4042;
+    color: #fff;
+    border-color: #3C4042;
+    .sub-menu li{
+        a{
+            color: #fff !important;
+            
+        }
+    }
+
+    .sub-menu-item:not(:last-of-type){
+        border-right: 1px solid #e5e5e5;
+    }
 }
