--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -6,6 +6,7 @@ ul{
         display: inline-block;
         padding-right: 20px;
         position: relative;
+        
         @media(max-width:720px) {
             display: none;
            
@@ -93,4 +94,36 @@ ul{
 a{
     cursor: pointer;
    
+}
+.columns2{
+    right: -100%;
+    top: 100%;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    width: inherit;
+    min-width: 300px;
+    //max-width: 500px;
+    height: inherit;
+    min-height: 150px;
+    padding: 15px 0;
+    border-bottom: 1px solid #59585757;
+    background-color: #FFFFFF;
+     .sub-menu-item{
+         min-width: 150px;
+        flex: 1;
+        &:not(:last-of-type){
+            border-right: 1px solid #5958571c;
+        }
+        .sub-menu li{
+            padding: 0;
+            a{
+                color: #272524;
+                padding-right: 0;
+                padding-left: 0;
+            }
+            display: block;
+            
+        }
+    }
 }
