--- a/resources/sass/_services.scss
+++ b/resources/sass/_services.scss
@@ -11,8 +11,15 @@
         margin-bottom: 15px;
     }
 
+    .container{
+        .row:not(:first-of-type){
+            margin-bottom: 80px;
+        }
+        
+    }
     .single-service{
         height: 200px;
+       
         @media(max-width:720px) {
             margin-bottom: 10px;
     
