Styling the dropdown menu

--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -19,9 +19,9 @@ body,
 }
 
 .columns2 {
-  background: #3C4042;
+  background: #272524;
   color: #fff;
-  border-color: #3C4042;
+  border-color: #272524;
 }
 
 .columns2 .sub-menu li a {
