--- a/resources/sass/dark.scss
+++ b/resources/sass/dark.scss
@@ -17,9 +17,9 @@ body,.service-section{
 }
 
 .columns2{
-    background: #3C4042;
+    background: #272524;
     color: #fff;
-    border-color: #3C4042;
+    border-color: #272524;
     .sub-menu li{
         a{
             color: #fff !important;
