main portfolio page fix

--- a/resources/sass/_portfolio.scss
+++ b/resources/sass/_portfolio.scss
@@ -1,10 +1,7 @@
-.portflio_background {
-    margin-top: 10px;
- 
-   background-image: url('../../public/img/android.jpg');
-   .header{
-    margin-top: 50px;
-   }
+.portflio{
+    position: relative;
+    min-height: 100vh;
+
   .container{
     img{
         height: 200px;
@@ -12,7 +9,7 @@
     }
   }
 
-  }
+  
   .line-progress{ 
       position: relative; 
       padding-bottom: 25px;
@@ -74,3 +71,13 @@
 
 .panel-area .panel-title .icon.minus,
 .panel-area .panel-title.active .icon.plus{ display: none; }
+}
+
+a{
+    text-decoration: none;
+    color: #ffffff;
+
+}
+.heading{
+    text-transform: uppercase;
+}
