--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,7 @@
 
 // Variables
 @import 'variables';
+@import'portfolio';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
@@ -10,3 +11,4 @@
 //Line Awesome
 
 @import '~line-awesome/src/line-awesome';
+
