--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -3,6 +3,15 @@
     padding: 0;
     
 }
+//portfolio css
+a{
+    text-decoration: none;
+    color: #ffffff;
+
+}
+.heading{
+    text-transform: uppercase;
+}
 
 @import 'variables';
 @import 'tophead';
@@ -11,4 +20,4 @@
 
 @import 'services';
 @import 'masthead';
-@import './portfolio';
+@import 'portfolio';
