--- a/resources/sass/_portfolio.scss
+++ b/resources/sass/_portfolio.scss
@@ -1,7 +1,7 @@
 .portflio_background {
     margin-top: 10px;
  
-   background-image: url('../../public/img/android.jpg');
+//    background-image: url('../../public/img/android.jpg');
    .header{
     margin-top: 50px;
    }
