--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -6,9 +6,7 @@
 
 @import 'variables';
 @import 'tophead';
-
-@import 'nav';
-
 @import 'services';
 @import 'masthead';
-@import './portfolio';
+@import 'portfolio';
+@import 'nav';
