--- a/resources/sass/_portfolio.scss
+++ b/resources/sass/_portfolio.scss
@@ -4,7 +4,7 @@
 //    background-image: url('../../public/img/android.jpg');
 //    .header{
 //     margin-top: 50px;
-//    }
+ }
 .portflio{
     position: relative;
     min-height: 100vh;
