--- a/resources/sass/_masthead.scss
+++ b/resources/sass/_masthead.scss
@@ -1,7 +1,7 @@
 .masthead {
     height: 50vh;
     min-height: 500px;
-    background-image: url('../img/cover.jpg');
+    background-image: url('https://images.unsplash.com/photo-1551739440-5dd934d3a94a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=80');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -18,7 +18,11 @@
         border-color: #ffffff;
         font-weight: 600;
         font-size: 16px;
+        filter:blur(0) !important;
 
+    }
+    .align-items-center{
+        filter:blur(0) !important;
     }
   }
 
