developer cruid first commit

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,4 +11,11 @@
 //Line Awesome
 
 @import '~line-awesome/src/line-awesome';
+@import 'variables';
+@import 'tophead';
+@import 'services';
+@import 'masthead';
+@import 'portfolio';
+@import 'nav';
 
+@import 'login';
