Modified Routes to factor in localization

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14124,11 +14124,17 @@ a {
 
 .phone-navigation {
   background: #5a5555;
-  width: inherit;
+  width: 50vw;
+  height: 100vh;
   max-width: 80vw;
   position: absolute;
   right: 0;
-  z-index: 99999;
+}
+
+.phone-navigation * {
+  font-size: 15px;
+  font-weight: 200px;
+  list-style-type: none;
 }
 
 :root {
