--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -13,12 +13,12 @@ a{
     text-transform: uppercase;
 }
 
-@import 'variables';
-@import 'tophead';
-@import 'services';
+// @import 'variables';
+// @import 'tophead';
+// @import 'services';
 
-@import 'portfolio';
-@import 'nav';
+// @import 'portfolio';
+// @import 'nav';
 
-@import 'login';
-@import 'masthead';
+// @import 'login';
+// @import 'masthead';
