--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -175,3 +175,11 @@ a{
     
 }
 
+.phone-navigation{
+    background: #5a5555;
+    width:inherit;
+    max-width: 80vw;
+    position: absolute;
+    right: 0;
+    z-index: 99999;
+}
