Modified Routes to factor in localization

--- a/resources/sass/_admin-email.scss
+++ b/resources/sass/_admin-email.scss
@@ -241,3 +241,8 @@ ul#accordionSidebar::before{
     opacity: .5;
     color: #fff;
 }
+
+.pagination-links{
+    display: flex;
+    justify-content: flex-end;
+}
